ログイン処理一部修正